# libtecmp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.bat  conanfile.py  conanfile.txt
.circleci/: config.yml
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  app.cpp
apps/cmake/: pcapplusplus.cmake  pcapplusplus_conan.cmake  pcapplusplus_win32.cmake
include/tecmp/: endianness.h  tecmp.h
src/: CMakeLists.txt  tecmp.c
traces/: input_eth.pcap  output_eth.pcap
